# polarbadge

./: .gitignore  README.md  cli.py  config.toml.example  pyproject.toml
polarbadge/card/: constants.py
polarbadge/models/: card.py  geekevents.py
polarbadge/parties/pp33/: cli.py  spec.py
polarbadge/service/: config.py  geekevents.py  picture.py  render.py
polarbadge/templates/: card.html.j2
